Bug 480695 - Added comments don't show up until reloading the page
Summary: Added comments don't show up until reloading the page
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-01 17:34 UTC by aronkvh
Modified: 2024-02-07 19:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aronkvh 2024-02-01 17:34:34 UTC
Comments I just wrote don't show up until the post is closed and reopened.
Comment 1 Joshua Goins 2024-02-07 19:46:53 UTC
Git commit f503273c087b5624eea447b42a91540141ebfc33 by Joshua Goins.
Committed on 07/02/2024 at 19:46.
Pushed by redstrate into branch 'master'.

Refresh the thread if we reply to it

This makes it nicer when you reply to a thread to make sure the post was
sent correctly, like how it is already on most timelines.
Related: bug 467724

M  +3    -0    src/content/ui/Main.qml
M  +1    -0    src/content/ui/StatusComposer/StatusComposer.qml
M  +9    -0    src/content/ui/ThreadPage.qml
M  +6    -0    src/timeline/threadmodel.cpp
M  +3    -0    src/timeline/threadmodel.h

https://invent.kde.org/network/tokodon/-/commit/f503273c087b5624eea447b42a91540141ebfc33
Comment 2 Joshua Goins 2024-02-07 19:54:08 UTC
Git commit d61fdce4006305f522e7f407c09ec0672df1d685 by Joshua Goins.
Committed on 07/02/2024 at 19:46.
Pushed by redstrate into branch 'release/24.02'.

Refresh the thread if we reply to it

This makes it nicer when you reply to a thread to make sure the post was
sent correctly, like how it is already on most timelines.
Related: bug 467724
(cherry picked from commit f503273c087b5624eea447b42a91540141ebfc33)

M  +3    -0    src/content/ui/Main.qml
M  +1    -0    src/content/ui/StatusComposer/StatusComposer.qml
M  +9    -0    src/content/ui/ThreadPage.qml
M  +6    -0    src/timeline/threadmodel.cpp
M  +3    -0    src/timeline/threadmodel.h

https://invent.kde.org/network/tokodon/-/commit/d61fdce4006305f522e7f407c09ec0672df1d685