Refresh the thread if we reply to it

This makes it nicer when you reply to a thread to make sure the post was
sent correctly, like how it is already on most timelines.

BUG: 480695
CCBUG: 467724